[package]
name = "escrow"
version = "1.0.0"
description = "A working minimal Anchor Escrow app"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
litesvm = "0.7.1"
solana-instruction = "2.3.0"
solana-keypair = "2.2.3"
solana-kite = "0.2.1"
solana-pubkey = "2.4.0"
solana-signer = "2.2.1"
solana-hash = "2.3.0"
solana-program = "2.3.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
